fix spacing, size

--- a/components/ProductGrid/ProductCard.module.css
+++ b/components/ProductGrid/ProductCard.module.css
@@ -14,6 +14,7 @@
   background: white;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .mainImageBox {
@@ -66,7 +67,7 @@
 }
 
 .cardTitle {
-  margin-top: 10px;
+  margin: 5px;
   color: #333;
 }
 
